# dfdx

./: Cargo.toml  rust-toolchain.toml
dfdx-core/: Cargo.toml  build.rs
dfdx-core/src/tensor/webgpu/: device.rs
dfdx-core/src/tensor_ops/abs/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/accurate_gelu/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/add/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/clamp/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/cos/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/div/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/exp/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/fast_gelu/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/ln/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/mul/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/nans_to/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/negate/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/pow/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/recip/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/relu/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/sigmoid/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/sin/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/sqrt/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/square/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/sub/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/sum_to/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/tanh/: webgpu_kernel.rs
dfdx-core/src/tensor_ops/utilities/: device.rs  webgpu_kernels.rs
dfdx-core/wgpu_kernels/abs/: Cargo.toml
dfdx-core/wgpu_kernels/abs/src/: lib.rs
dfdx-derives/: Cargo.toml
dfdx-derives/src/: lib.rs
