[package]
name = "abs"
version = "0.0.0"
publish = false
# authors.workspace = true
# edition.workspace = true
# license.workspace = true
# repository.workspace = true

[lib]
crate-type = ["dylib", "lib"]

[dependencies.spirv-std]
version = "0.9.0"

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
rayon = "1.5"
